header background position fixed on tablet version

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -9,6 +9,8 @@
 
   @include onTablet {
     background-image: url(../images/header/header_background_744w.png);
+
+    background-position: top center;
   }
 
   @media (max-height: 700px) {
